# gameproject

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: StandardProjectSettings.cmake
doctest/: CMakeLists.txt  doctest.h
documentation/html/: annotated.html  ball_8cpp.html  ball_8h.html  ball_8h_source.html  class_ball-members.html  class_ball.html  class_menu-members.html  class_menu.html  class_player-members.html  class_player.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  menu_8cpp.html  menu_8h.html  menu_8h_source.html  menudata.js  player_8cpp.html  player_8h.html  player_8h_source.html
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_7.js  variables_8.js  variables_9.js
src/: CMakeLists.txt  ball.cpp  ball.h  main.cpp  menu.cpp  menu.h  player.cpp  player.h  tests.cpp
